--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
- BEFORE 2020 I WILL PUBLISH THERE MY NEW PORTFOLIO
- ~ ErtYwek
+<meta name="propeller" content="66525db38999da740c5a04bde71f29c0">
+
+Coming soon!
