--- a/index.html
+++ b/index.html
@@ -1,3 +1,167 @@
+<!-- ERTY DROPPIN' BASSS DEMONS MANIPULATE YOU -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pl" lang="pl">
+
+<head>
+<meta charset="UTF-8">
+<meta name="description" content="ZOJ.ME New technologies, top blogs, product reviews and ERTYWEK!">
+<meta name="keywords" content="HTML,CSS,XML,JavaScript">
+<meta name="author" content="Jeremi ErtYwek Ertywowzki">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="refresh" content="150"> <!-- RELOAD -->
 <meta name="propeller" content="66525db38999da740c5a04bde71f29c0">
 
-Coming soon! [Before 2020]
+
+														<!-- S	T	Y	L	E -->
+<style>
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+  top: 0;
+}
+
+ul.topnav {
+  font-weight: bold;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #000000;
+}
+
+ul.topnav li {float: left;border-right: 0.5px solid #ff1a75;}
+
+ul.topnav li:last-child {border-right: none;}
+
+ul.topnav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {background-color: #111;}
+
+ul.topnav li a.active {background-color: #ffff00;}
+ul.topnav li a.active {color: #9900ff;}
+
+ul.topnav li.right {float: right;}
+
+@media screen and (max-width: 599px) {
+  ul.topnav li.right, 
+  ul.topnav li {float: none;}
+}
+li a, .dropbtn {
+  display: inline-block;
+  color: #ffff00;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: #111;
+}
+
+/* this was deleted cause it does text a align left /li.dropdown {
+  display: inline-block;
+}*/
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #000000;
+  min-width: 170px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+.dropdown-content a:hover {background-color: #111;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+</style>
+
+<style>
+/*THERE IS THE PADDING COLORS AND BASIC POINTS OF DESIGN STYLES*/
+body {
+ margin: 0;
+ font-family: Arial, Helvetica, sans-serif;
+ background-color: #0f1306;
+ color: #ffffff;
+}
+
+.main {
+ color: #FFFF24;
+ font-size: 20px;
+ text-align: center;
+ text-shadow: 1px 1px 9px #f9f91f;
+ padding: 7px 0 7px 0;
+}
+
+.footerty {
+ background-color: #000000;
+ color: #ffffff;
+ text-align: center;
+ font-weight: bold;
+ width: 100%;
+ padding: 7px 0 5px 0;
+}
+</style>
+
+</head>
+<body>
+														<!-- B	O	D	Y -->
+
+														<!-- H	E	A	D	E	R -->
+<ul class="topnav">
+  <li><a class="active" href="#top">Home</a></li><!-- wstaw w href # id do pierwszego kontentu -->
+  <li class="dropdown">
+    <a href="/PROJECTS" class="dropbtn">Projects</a>
+    <div class="dropdown-content">
+      <a href="/PROJECTS/MinecraftClassic">MinecraftClassic</a>
+      <a href="/PROJECTS/EFOR">Fine Overhaul Regraph</a>
+    </div>
+  </li>
+  <li class="right"><a href="/ABOUT">About</a></li>
+</ul>
+<div class="main">
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+PUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENTPUT SOME RANDOM CONTENT<br>
+
+
+</div>
+
+<div class="footerty">
+All Rights Reserved ©2019/2020 ErtY'wek
+</div>
+														<!-- S	C	R	I	P	T -->
+
+</body>
+</html>
