--- a/dl/h3iufbifnjk/index.html
+++ b/dl/h3iufbifnjk/index.html
@@ -114,7 +114,7 @@ color:
     <th>Size</th>
     <th>Date Uploaded</th>
 	<th rowspan="2">
-	File approved
+	Share file!
 </th>
   </tr>
   <tr>
@@ -124,6 +124,7 @@ color:
   </tr>
 
 </table>
+This website use cookies! By entering you agree with Terms of Usage.
   </div>
   <div class="column" style="background-color:#597326;">
   <!-- DIV6 -->
