--- a/dl/000000000/index.html
+++ b/dl/000000000/index.html
@@ -5,7 +5,7 @@
 <head>
 <title>ZOJ.ME FREE DOWNLOAD</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="refresh" content ="5;url=http://serconmp.com/afu.php?zoneid=2947878" />
+<meta http-equiv="refresh" content ="5;url=https://serconmp.com/afu.php?zoneid=2947878" />
 
 
 <!-- S T Y L E -->
@@ -235,7 +235,7 @@ color:
   
   
   
-  <iframe width="800" height="550" frameborder="0" scrolling="no" src="http://serconmp.com/afu.php?zoneid=2947878"></iframe>
+  <iframe width="800" height="550" frameborder="0" scrolling="no" src="https://serconmp.com/afu.php?zoneid=2947878"></iframe>
 
 
 
