--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ This was made just only for my usage on https://zoj.me shared over an CDN
 <meta http-equiv="refresh" content="300"> <!-- RELOAD -->
 <link rel="stylesheet" type="text/css" href="out/EY.css">
 
+
+
+<title>ZOJ.ME NEWS</title>
+
 														<!-- S	T	Y	L	E -->
 <style>
 /* b-dark-purple#5c00e6 dark-green#004d00 */
