--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@ ZOJ.ME Is a place for viral news from internet.
 All Rights Reserved ©2019/2020 Jeremi ErtY'wek
 <input type="checkbox" id="toggle">
 <label onclick="loadDoc()" for="toggle">About ZOJ.ME</label>
-<dialog style=""><label for="toggle">X</label>
-<p><div id="xhttpget"><h1>ZOJ.ME Services</h1>
+<dialog style="">ZOJ.ME Services<label for="toggle">X</label>
+<p><div id="xhttpget">
 
 </div></p>
 </dialog>
