--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@ The study, published in the Journal of Epidemiology and Community Health, includ
 <div style="padding: 20 0 20 0;" class="main">
 <img class="imgincon" width="280vw" src="pictures/ZOJbranding.png">
 ZOJ.ME Is a place for viral news from internet.
+We also share subdomains [gaming.zoj.me, bl0g.zoj.me eg.]
 
 </div>
 
