--- a/index.html
+++ b/index.html
@@ -320,6 +320,38 @@ sm {
     background: url(pictures/posts/bg.jpg) top center;
     opacity: .3;
 }
+
+																						/* hEY LINKS AND BUTTON */
+x {
+ background-color: red;
+ box-shadow: 0 5px 0 darkred;
+ color: white;
+ padding: 1em 1.5em;
+ position: relative;
+ text-decoration: none;
+ text-transform: uppercase;
+}
+/* unvisited link */
+a:link {
+ color: #ffcccc;
+ text-decoration: none;
+}
+/* visited link */
+a:visited {
+ color: #ffcccc;
+}
+/* mouse over link */
+a:hover {
+ color: #ff4d4d;
+ background-color: #96d1f8;
+ cursor: pointer;
+ text-decoration: underline;
+}
+/* selected link */
+a:active {
+ box-shadow: none;
+ top: 5px;
+}
 </style>
 <style>													<!-- S	P	R	I	T	E	S -->
 .divTable{
@@ -447,8 +479,9 @@ The study, published in the Journal of Epidemiology and Community Health, includ
 <!-- NEXT MAIN DIV -->
 <div style="padding: 20 0 20 0;" class="main">
 <img class="imgincon" width="280vw" src="pictures/ZOJbranding.png">
-ZOJ.ME Is a place for viral news from internet.
-We also share subdomains [gaming.zoj.me, bl0g.zoj.me eg.]
+ZOJ.ME Is a place for viral news from internet, blog competitions and tutorials.
+We also share subdomains [gaming.zoj.me, bl0g.zoj.me etc.] for webmasters and programmers who doesn't have their own domain.
+
 
 </div>
 
@@ -461,11 +494,13 @@ We also share subdomains [gaming.zoj.me, bl0g.zoj.me eg.]
 All Rights Reserved ©2019/2020 Jeremi ErtY'wek
 <input type="checkbox" id="toggle">
 <label onclick="loadDoc()" for="toggle">About ZOJ.ME</label>
-<dialog style="">ZOJ.ME Services<label for="toggle">X</label>
+<dialog style="">ZOJ.ME Services <label for="toggle">X</label>
 <p><div id="xhttpget">
 
 </div></p>
-</dialog>
+</dialog><br>
+In case you want a subdomain contact me via <a href="https://cutt.ly/De248Sz">facebook</a> or discord: ErtY#9909
+
 </div>
 
 </div>
