--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ This was made just only for my usage on https://zoj.me shared over an CDN
 <meta name="author" content="Jeremi ErtYwek Ertywowzki">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="refresh" content="300"> <!-- RELOAD -->
-<link rel="stylesheet" type="text/css" href="out/EY3.css">
+
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<!-- ****** favicony faviconit.com ****** -->
 	<link rel="shortcut icon" href="/favicon.ico">
@@ -353,7 +353,7 @@ a:active {
  top: 5px;
 }
 </style>
-<style>													<!-- S	P	R	I	T	E	S -->
+<style>													<!-- D I V / S	P	R	I	T	E	S -->
 .divTable{
 	display: table;
 	width: 100%;
@@ -378,6 +378,7 @@ a:active {
 	display: table-row-group;
 }
 </style>
+<link rel="stylesheet" type="text/css" href="out/EY3.css">
 
 <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101213734);</script>
 <script async src="//static.getclicky.com/js"></script>
