--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- ERTY DROPPIN' BASSS DEMONS MANIPULATE YOU -->
+<!-- ERTYWEK DOMINATING -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pl" lang="pl">
 <!--    R	E	A	D	M	E
@@ -14,6 +14,7 @@ This was made just only for my usage on https://zoj.me shared over an CDN
 <meta name="author" content="Jeremi ErtYwek Ertywowzki">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="refresh" content="300"> <!-- RELOAD -->
+<meta http-equiv="Cache-control" content="public">
 
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<!-- ****** favicony faviconit.com ****** -->
@@ -502,16 +503,14 @@ body {font-family: "Lato", sans-serif;}
 <ul class="topnav">
 <li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="#">News</a></div></li>
 <li><div><a class="pagelink" onclick="openPage(event, 'page2')" href="#">Articles</a></div></li>
-<!--<li><div><a class="pagelink" onclick="openPage(event, 'page3')" href="#">Services</a></div></li>-->
-<li><div><a href="/CLOUD">CLOUD STORAGE</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page3')" href="#">Services</a></div></li>
 <li class="dropdown">
-	<a href="/PROJECTS" onclick="menu('projects'); clicky.log(this.href,this.innerText); return false;" class="dropbtn">Projects</a>
+	<a href="/projects" onclick="menu('projects'); clicky.log(this.href,this.innerText); return false;" class="dropbtn">Projects</a>
 	<div class="dropdown-content">
-		<a href="/PROJECTS/#">#</a>
-		<a href="/PROJECTS/#">#</a>
+		<a href="/projects/#">#</a>
+		<a href="/projects/#">#</a>
 	</div>
 </li>
-<li><a href="/?" onclick="menu('about'); clicky.log(this.href,this.innerText); return false;">?</a></li>
 <li class="right">
 	<a href="#"><form method="get" action="https://www.google.com/custom" target="google_window">
 	<input type="hidden" name="domains" value="zoj.me">
@@ -603,13 +602,26 @@ body {font-family: "Lato", sans-serif;}
 
 	<!-- ARTICLES MAINTAB DIV -->
 <div class="main">
-Something goes there ..........Something goes there ..........Something goes there ..........Something goes there ..........
-Something goes there ..........Something goes there ..........Something goes there ..........Something goes there ..........
+Jak to obecnie z hostingami jest.
 
-Something goes there ..........Something goes there ..........Something goes there ..........Something goes there ..........
-Something goes there ..........Something goes there ..........Something goes there ..........
+Drzewiej serwery były tańsze nie było tyle ataków na strony, stare dobre czasy. Ale czasy się zmieniają.
+
+Obecnie z tzw. shared hostingami (hostingami współdzielonymi) jest tak że co chwile znika jedna firma świadcząca usługę a zaraz pojawia się nowa. Często firmy nowe jak i te dobrze nam znane używają marketingowych kłamstw typu nielimitowana przestrzeń albo nielimitowane odsłony. W głębi tak
 
 
+</div>
+
+
+
+</div>
+														</div><!-- page2 end-->
+
+														<div id="page3" class="pagecontent"><!-- page3 begin -->
+<div id="trzy">
+
+	<!-- SERVICES MAINTAB DIV -->
+<div class="main">
+TESTING TESTING TESTING TESTING ...
 </div>
 
 <div class="price-table-wrapper">
@@ -665,17 +677,6 @@ Something goes there ..........Something goes there ..........Something goes the
       <li>Ticket system support</li>
     </ul>
   </div>
-</div>
-
-</div>
-														</div><!-- page2 end-->
-
-														<div id="page3" class="pagecontent"><!-- page3 begin -->
-<div id="trzy">
-
-	<!-- SERVICES MAINTAB DIV -->
-<div class="main">
-
 </div>
 
 </div>
