--- a/projects/index.html
+++ b/projects/index.html
@@ -41,7 +41,7 @@ This was made just only for my usage on https://zoj.me shared over an CDN
 	<!-- ****** favicony faviconit.com ****** -->
 
 
-<title>ZOJ.ME</title>
+<title>PROJECTS</title>
 
 														<!-- S	T	Y	L	E -->
 <style>
@@ -712,7 +712,7 @@ We also share subdomains for webmasters and programmers who doesn't have their o
 	<div class="divTableCell">
 	
 		<div class="footerty">
-		All Rights Reserved ©2019/2020 <a href="https://ertywek.zoj.me">Jeremi ErtY'wek</a> | Hosted on Google servers.<br>
+		All Rights Reserved ©2019/2020 <a href="https://ertywek.zoj.me">Jeremi ErtY'wek</a>
 		<input type="checkbox" id="toggle">
 		<label onclick="loadDoc()" for="toggle">About ZOJ.ME</label>
 		<dialog style="">ZOJ.ME Services <label for="toggle">X</label>
@@ -720,8 +720,9 @@ We also share subdomains for webmasters and programmers who doesn't have their o
 		
 		</div></p>
 		</dialog>
+		<br>
 		<!--In case you want a subdomain contact me via <a href="https://cutt.ly/De248Sz">facebook</a> or discord: ErtY#9909-->
-		
+	
 		</div>
 	
 	</div>
