--- a/LTD/index.html
+++ b/LTD/index.html
@@ -116,7 +116,7 @@ body {
  
  <p><h3>Załącznik 1 do REGULAMINU "Statut Gildii"</h3>
 Jeżeli masz pomysły lub jakiś problem, składaj pismo do krolek16 lub DErtyEmp <br>
-PODATEK ZA STATUS "GRACZ NA WAKACJACH" WYNOSI: 500 surowców ZA OKRES 2 LAT I MOŻE ZOSTAĆ ZMIENIONY W KAŻDEJ CHWILI!<br>
+PODATEK ZA STATUS "GRACZ NA WAKACJACH" WYNOSI: 900 surowców ZA OKRES 2 LAT!<br>
 Baron: DErtyEmp | Moderator: krolek16 <br>
 Maksymalna Epoka: PostModernizm. Gracze z epok Współczesność i dalszych będą wyrzucani <br>
 Poradnik odnośnie walki: <a target="_blank" href="https://www.youtube.com/watch?v=VKTtnswnWDU">https://www.youtube.com/watch?v=VKTtnswnWDU</a>
@@ -135,7 +135,7 @@ Szlachcic może mieć status AKTYWNY bądź GNW i zmienia on wymagania regulamin
 1.1. Obrażanie moderatora bądź Barona kończy się obowiązkową karą zaznaczoną w punkcie 9. <br>
 <strong>2. Szlachcic AKTYWNY może wybrać między 2 obowiązkami 2.1 lub 2.2 inaczej poniesie karę zaznaczoną w punkcie 9. <br>
 2.1. Wrzucanie surowców z swojej epoki, 2 poprzednich epok oraz następnej epoki do skarbca gildyjnego w ilości 100 w ciągu 2 miesięcy. <br>
-2.2. Branie udział w Wyprawie Gildyjnej conajmniej kończąc 1 etap [16/48konfliktów]. <br></strong>
+2.2. Branie udział w Wyprawie Gildyjnej co najmniej kończąc 1 etap [16/48konfliktów]. <br></strong>
 2.3. Punkt 2 regulaminu nie dotyczy szlachciców o opłaconym statusie GNW. <br>
 2.4. Wszelkie nadwyżki z podpunktu 2.1 są uznawane za dary i nie są wliczane do balansu w następnym dwumiesięczniku. <br>
 3. Reklamowanie/polecanie innej gildii w grze FoE jest karane wydaleniem z gildii i dodaniem gracza na czarną listę lub karą wyznaczoną przez Barona. <br>
@@ -185,7 +185,7 @@ Szlachcic może mieć status AKTYWNY bądź GNW i zmienia on wymagania regulamin
 17.2. Opłaty za czynności i ustalenia nie ustalone w tym regulaminie bądź załącznikach ustala Baron i informacje o nich uzyskasz od Barona bądź moderatora.
 
 Koniec REGULAMINU.</p>
-z dnia 9 lutego 2020 Edycja numer 30?
+z dnia 14 lutego 2020 Edycja numer 44 Autor: Jeremi "ErtYwek"
 <p>//// //// //// //// |Chameleon is a invisible player| \\\\ \\\\ \\\\ \\\\</p>
 Kontakt z Radą LTD: <a target="_blank" href="https://www.facebook.com/groups/ltdgw/">https://www.facebook.com/groups/ltdgw/</a>
 Kruczki Regulaminowe:
