--- a/about/index.html
+++ b/about/index.html
@@ -217,7 +217,7 @@ a {
 
 <section class="et-hero-tabs">
 	<h1>
-<span>E</span><span>R</span><span>T</span><span>Y</span><span>W</span><span>E</span><span>K</span>
+<span>J</span><span>E</span><span>R</span><span>E</span><span>M</span><span>I</span> "<span>E</span><span>R</span><span>T</span><span>Y</span><span>W</span><span>E</span><span>K</span>"
 	</h1>
 	<div class="et-hero-tabs-container">
 		<a class="et-hero-tab" href="#tab-es6">ES6</a>
