--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ This was made just only for my usage on https://zoj.me shared over an CDN
 <meta http-equiv="refresh" content="300"> <!-- RELOAD -->
 <meta http-equiv="Cache-control" content="public">
 
+<link rel="canonical" href="https://zoj.me/" />
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<!-- ****** favicony faviconit.com ****** -->
 	<link rel="shortcut icon" href="/favicon.ico">
@@ -712,7 +713,7 @@ We also share subdomains for webmasters and programmers who doesn't have their o
 	<div class="divTableCell">
 	
 		<div class="footerty">
-		All Rights Reserved ©2019/2020 <a href="https://ertywek.zoj.me">Jeremi ErtY'wek</a> | Hosted on Google servers.<br>
+		All Rights Reserved ©2019/2020 <a href="https://zoj.me/about/">Jeremi ErtY'wek</a> | Hosted on Google servers.<br>
 		<input type="checkbox" id="toggle">
 		<label onclick="loadDoc()" for="toggle">About ZOJ.ME</label>
 		<dialog style="">ZOJ.ME Services <label for="toggle">X</label>
