--- a/LTD/RegG/index.html
+++ b/LTD/RegG/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Jeremi ErtYwek Ertywowzki">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="refresh" content="555"> <!-- DELETE THIS LINE LATER -->
-<title>GWorld LTD Gem</title>
+<title>Regulamin GWorld</title>
 
 <!--
 
@@ -46,8 +46,10 @@ body {
 
 .FAKEheader {
   position: static;
+  top: 0;
+  z-index: 1;
   width: 100%;
-  text-align: center;
+  opacity: 0;
   background-color: #597326;
 
   background-position: center;
@@ -192,7 +194,6 @@ Kruczki Regulaminowe:
 Jeśli punkt wyznacza jako karę możliwości z punktu 9 to gracz musi być poinformowany o punkcie który decyduje o karze z punktu 9. <br>
 
 
-erty note: jak wróce w lato do foe to usunąć stare zaproszenia do gil
 <h3>CZARNA LISTA czyli nieakceptowani w gildii gracze:</h3>
 
 </div>
