--- a/LTD/RegG/index.html
+++ b/LTD/RegG/index.html
@@ -143,8 +143,8 @@ Szlachcic może mieć status AKTYWNY bądź GNW i zmienia on wymagania regulamin
 3. Reklamowanie/polecanie innej gildii w grze FoE jest karane wydaleniem z gildii i dodaniem gracza na czarną listę lub karą wyznaczoną przez Barona. <br>
 3.1. Reklamowanie gier, usług oraz rzeczy nienależących do organizacji LTD Gem lub Innogames* jest karane wydaleniem z gildii i dodaniem gracza na czarną listę. <br>
 3.2. Osoby ukarane zgodnie z punktem 3 mogą zgłosić zażalenie odnośnie wydanego wyroku do Rady LTD. <br>
-4. REGULAMIN obowiązuje wraz z opublikowaniem jego aktualnej wersji pod adresem https://zoj.me/out/ltd/#. <br>
-4.1. ZAŁĄCZNIKI do regulaminu obowiązują wraz z opublikowaniem ich aktualnej wersji pod adresem https://zoj.me/out/ltd/#. <br>
+4. REGULAMIN obowiązuje wraz z opublikowaniem jego aktualnej wersji pod adresem https://zoj.me/ltd/regg/#. <br>
+4.1. ZAŁĄCZNIKI do regulaminu obowiązują wraz z opublikowaniem ich aktualnej wersji pod adresem https://zoj.me/ltd/regg/#. <br>
 4.2. Zmiany w regulaminie są wprowadzane w chwili ich potrzeby i obowiązują od momentu wskazanego w punkcie 4. <br>
 5. Szlachcic, który w rozumieniu Barona i/lub regulaminu utrudnia grę innym szlachcicom bądź zmianę tudzież postęp gildii zostaje ukarany zgodnie z punktem 9. <br>
 6. Każdy szlachcic ma prawo rekrutować innych graczy do gildii, informować o misjach gildii oraz potencjalnych graczach chętnych do dołączenia. <br>
