--- a/index.html
+++ b/index.html
@@ -543,16 +543,16 @@ body {font-family: "Lato", sans-serif;}
 <div id="jeden" class="maintab">
 	<div class="tab">
 		<div class="tablinks tl1" onclick="openCity(event, '1')" id="defaultOpen">
-		XMR Monero cryptocurrency website gets hacked
+		New Wi-Fi Encryption Vulnerability Affects Over A Billion Devices
 		</div>
 		<div class="tablinks tl2" onclick="openCity(event, '2')">
-		Authorities take down 'Imminent Monitor' RAT malware website
+		Lawyer: “U.S. Wanted to Kill WikiLeaks Founder & Make It Look Like an Accident”
 		</div>
 		<div class="tablinks tl3" onclick="openCity(event, '3')">
 		Dexphot malware uses fileless techniques to install cryptominer
 		</div>
 		<div class="tablinks tl4" onclick="openCity(event, '4')">
-		SQL Injection Errors No Longer the Top Software Security Issue
+		Top cloud computing trends and predictions
 		</div>
 		<div class="tablinks tl5" onclick="openCity(event, '5')">
 		Scientists Conclude Fluoride Causes Hypothyroidism Leading To Depression, Weight Gain, and Worse
@@ -560,19 +560,47 @@ body {font-family: "Lato", sans-serif;}
 	</div>
 	<!-- Force is sometimes the only both effective and available tool for changes. -->
 	<div id="1" class="tabcontent">
-	<img class="imgintab" width="280vw" src="pictures/posts/getmoneroorgdownloads.jpg">
-	Someone hacked the official website of the Monero cryptocurrency project [getmonero.org] and replaced legitimate Linux and Windows binaries available for download with malicious versions designed to steal funds from users wallets. The supply-chain cyberattack was revealed on Monday after a Monero user spotted that the cryptographic hash for binaries he downloaded from the official site didn't match the hashes listed on it Following an immediate investigation, the Monero team today also confirmed that its website, GetMonero.com, was indeed compromised, potentially affecting users who downloaded the CLI wallet between Monday 18th, 2:30 am UTC and 4:30 pm UTC. XMRCoreTeam investigates to find people who stay behind this attack.
-	<sm>Source: getmonero.org / thehackernews.com</sm>
+	<img class="imgintab" width="280vw" src="pictures/posts/matrixworldmap.jpg">
+	Cybersecurity researchers today uncovered a new high-severity hardware vulnerability residing in the widely-used Wi-Fi chips manufactured by Broadcom and Cypress—apparently powering over a billion devices, including smartphones, tablets, laptops, routers, and IoT gadgets.
+	Dubbed 'Kr00k' and tracked as CVE-2019-15126, the flaw could let nearby remote attackers intercept and decrypt some wireless network packets transmitted over-the-air by a vulnerable device.
+	The attacker does not need to be connected to the victim's wireless network and the flaw works against vulnerable devices using WPA2-Personal or WPA2-Enterprise protocols, with AES-CCMP encryption, to protect their network traffic.
+	"Our tests confirmed some client devices by Amazon (Echo, Kindle), Apple (iPhone, iPad, MacBook), Google (Nexus), Samsung (Galaxy), Raspberry (Pi 3), Xiaomi (RedMi), as well as some access points by Asus and Huawei, were vulnerable to Kr00k," ESET researchers said.
+	According to the researchers, the Kr00k flaw is somewhat related to the KRACK attack, a technique that makes it easier for attackers to hack Wi-Fi passwords protected using a widely-used WPA2 network protocol.
+	Before proceeding to details of the new Kr00k attack, it's important to note that:
+    The vulnerability does not reside in the Wi-Fi encryption protocol; instead, it exists in the way vulnerable chips implemented the encryption,
+    It doesn't let attackers connect to your Wi-Fi network and launch further man-in-the-middle attacks or exploitation against other connected devices,
+    It doesn't let attackers know your Wi-Fi password, and also changing it wouldn't help you patch the issue,
+    It doesn't affect modern devices using WPA3 protocol, the latest Wi-Fi security standard.
+    However, it does let attackers capture and decrypt some wireless packets (several kilobytes), but there's no way to predict what data it will include,
+    Most importantly, the flaw breaks encryption on the wireless layer but has nothing to do with TLS encryption that still secures your network traffic with sites using HTTPS.
+	Now you might be wondering what the Kr00k attack then let attackers do?
+	In brief, a successful attack merely degrades your security a step towards what you'd have on an open Wi-Fi network. Thus, what sensitive information attackers can capture from a vulnerable device is totally depends upon the lack of the next layer of network traffic encryption i.e., visiting non-HTTPS websites.
+	The attack relies on the fact that when a device suddenly gets disconnected from the wireless network, the Wi-Fi chip clears the session key in the memory and set it to zero, but the chip inadvertently transmits all data frames left in the buffer with an all-zero encryption key even after the disassociation.
+	Therefore, an attacker in near proximity to vulnerable devices can use this flaw to repeatedly trigger disassociations by sending deauthentication packets over the air to capture more data frames, "potentially containing sensitive data, including DNS, ARP, ICMP, HTTP, TCP, and TLS packets."
+	Besides this, since the flaw also affects chips embedded in many wireless routers, the issue also makes it possible for attackers to intercept and decrypt network traffic transmitted from connected devices that are not vulnerable to Kr00k, either patched or using different Wi-Fi chips.
+	ESET researchers reported this issue to both affected chip manufacturers, Broadcom and Cypress, last year, as well as many affected device manufacturers who are responsible for developing a patch to mitigate the problem via software or firmware updates for their users.
+	Apple has already released patches for its users, some should have issued advisory or security patches at the time of publication, and other vendors are still testing the issue against their devices. 
+	<sm>Source: eset.com / thehackernews.com</sm>
 	</div>
 	<div id="2" class="tabcontent">
-	<img class="imgintab" width="280vw" src="pictures/posts/europol+afp+imrat.jpg">
-	A hacking tool that was able to give full remote control of a victim’s computer to cybercriminals has been taken down as a result of an international law enforcement operation targeting the sellers and users of the Imminent Monitor Remote Access Trojan (IM-RAT).
-	The investigation, led by the Australian Federal Police (AFP), with international activity coordinated by Europol and Eurojust, resulted in an operation involving numerous judicial and law enforcement agencies in Europe, Colombia and Australia.
-	Coordinated law enforcement activity has now ended the availiblity of this tool, which was used across 124 countries and sold to more than 14 500 buyers. IM-RAT can no longer be used by those who bought it.
-	Search warrants were executed in Australia and Belgium in June 2019 against the developer and one employee of IM-RAT. Subsquently, an international week of actions was carried out this November, resulting in the takedown of the Imminent Monitor 
-	infrastructure and the arrest at this stage of 13 of the most prolific users of this Remote Access Trojan (RAT). Over 430 devices were seized and forensic analysis of the large number of computers and IT equipment seized continues.
-	Actions were undertaken this week in the framework of this operation in the following countries: Australia, Colombia,  Czechia, the Netherlands, Poland, Spain, Sweden and the United Kingdom. 
-	<sm>Source: europol.europa.eu / imminentmethods.net</sm>
+	<img class="imgintab" width="280vw" src="pictures/posts/julianassange.jpg">
+	Julian Assange’s lawyer claimed this week in court at his extradition hearing that the U.S. wanted to murder the WikiLeaks founder and make it look like an accident.
+	
+	US wanted to kill WikiLeaks founder and make it look like accident:https://t.co/HsR7DebDxx
+	
+	— WikiLeaks (@wikileaks) February 25, 2020
+	American spies teamed up with UC Global, a Spanish company contracted by Ecuador to provide security at the embassy, to help plant “intrusive and sophisticated” secret surveillance of Assange, his attorney stated during the court hearing. Assange was even filmed meeting with his legal team and was so paranoid about constant surveillance that he started sleeping in a tent inside his bedroom, the Telegraph reported.
+	“There were conversations about whether there should be more extreme measures contemplated, such as kidnapping or poisoning Julian Assange in the embassy,” Assange’s attorney, Edward Fitzgerald, told the court, according to the Daily Mail.
+	UC Global’s owner David Morales, was exposed by a mysterious whistleblower known only as “Witness Two,” the report stated.
+	Witness Two revealed that Morales “said the Americans were desperate and had even suggested more extreme measures could be applied against the guest to put an end to the situation,” Fitzgerald told the court according to the Mail.
+	Morales was actively working with “the dark side—in other words, US intelligence agencies,” Fitzgerald claimed, according to the report. Assange was spied on in the Ecuadorian Embassy and the suspects at the time had tried to extort 3,000,000 million euro from the journalism organization for the destruction of the videos and pictures, which included videos of private situations such as doctors visits and lawyers meetings while he was in the embassy, Reuters reported.
+	Since then, police have made at least one arrest. Ring leader Jose Martin Santos, previously convicted for fraud, was arrested in Alicante for trying to bribe WikiLeaks with millions in exchange for private videos of Assange.
+	That plot was later tied to the CIA, who hired UC Global S. L. and its founder David Morales to spy on Assange according to court documents that were presented to Spain’s High Court, El Pais reported.
+	Spanish Judge José de la Mata requested to interview the WikiLeaks founder by video conference as a witness. However, the British judicial system stepped in denying the request, which could affect Assange’s extradition trial, El Pais reported.
+	Assange’s lawyer told the court that it was suggested that the embassy door be left open to make a kidnapping look like it could have been “an accident.”
+	Ironically, in 2016 WikiLeaks tweeted that it took UK police two hours to respond to a call after an unidentified man attempted to scale the wall of the Ecuadorian Embassy at 2:47 am. The would-be intruder escaped security and managed to flee to safety while embassy security waited two hours for U.K. police to take the two minute walk from the police station to the embassy. There is no evidence that this attempt was in any way related to UC Global.
+	
+	<sm>Source: anonhq.com / themindunleashed.com/2020/02/assange-lawyer-claims-us-wanted-kill-wikileaks-founder-make-it-look-like-an-accident.html</sm>
 	</div>
 	<div id="3" class="tabcontent">
 	Microsoft Corporation revealed its discovery of a polymorphic malware that uses fileless techniques to execute a cryptomining program on victimized machines.
@@ -581,11 +609,24 @@ body {font-family: "Lato", sans-serif;}
 	<sm>Source: microsoft.com</sm>
 	</div>
 	<div id="4" class="tabcontent">
-	SQL injection errors are no longer considered the most severe or prevalent software security issue.
-	Replacing it at the top of the Common Weakness Enumeration (CWE) list of most dangerous software errors is "Improper Restriction of Operations within the Bounds of a Memory Buffer." Cross-site scripting (XSS) errors rank second on the list, followed by improper input validation, information exposure, and out-of-bounds read errors. SQL injection flaws are now ranked sixth on the list of most severe security vulnerabilities.
-	The Department of Homeland Security's Systems Engineering and Development Institute, operated by The MITRE Corp., this week released an updated top 25 CWE listing of software errors. The update is the first in eight years and ranks security vulnerabilities based on prevalence and severity.
-	The CWE team looked at a dataset of some 25,000 Common Vulnerabilities and Exposures (CVE) entries over the past two years and focused on security weaknesses in software that are both common and have the potential to cause significant harm. Issues that have a low impact or are rarely excluded were filtered out.
-	<sm>Source: darkreading.com / cwe.mitre.org/top25/archive/2019/2019_cwe_top25.html</sm>
+	1. More data centers
+	Data center expansion has been on the horizon of many business heads simply for the reason that expanding their reach to other cities or countries gives them a local advantage and helps them deal with latency issues of data networks. Alibaba Cloud’s entry in India was one such strategic move that was geared towards giving a better service to their Indian customers and expanding their business horizon in the same region. Banks and financial institutions are comfortable with providing real estate capital to cloud providers who seek to build more data centers because of the ROI this industry has given over the years. Which is why it is safe to say that this trend will continue and probably be the top trend for 2018 as well.
+	2. Acquisitions and consolidations
+	There are moves with intent, and then there are moves which are intense. The number of strategic moves done by AWS, Google, Microsoft are quite a few in this calendar year. But, number hasn’t always been a measure of profitability. Many organizations made a move with an intent to grab a larger chunk of the market. But, some moves made a lot of difference. Like Microsoft’s acquisition of Cycle Computing which gave the former’s customers a benefit of computing ‘big data jobs’. This move was surely intense since Microsoft swept this deal right under the noses of their competitors with a strong pursuit strategy.
+	Another trend that is likely to be the talk of the industry is acquisition of foreign companies for market diversification. SUSE’s acquisition of Aptira in the APJ ( Australia Pacific & Japan) region has taken the APAC region by storm. With this acquisition, both parties will consolidate their complementing portfolios to provide a holistic solution to their customers in the region. We see this trend worth mentioning as well.
+	3. More innovative products on the shelf
+	The cloud industry has been brave with the products that they have launched this year. That is because innovation collectively has been a key ingredient to their product mix apart from filling the need gap for their customers. Datrium’s Cloud DVX, Microsoft’s Azure stack for Indian SMEs, SIMA Solution’s IBM integrated SIMA Cloud are some products that can be named as we speak of innovation.
+	The birth of these products has been mostly because challenging situations were thrown at the parent organizations by their customers when it came to satisfaction and user experience of the product. This shows that customers really are looking for newer solutions that cater to their needs when it comes to cloud. Definitely a trend that we will continue to see next year. What a simplified cloud could look like for the average SMB who is looking for web hosting must definitely check out ResellerClub’s hosting plans.
+	4. Rise and rise of IoT
+	Connected devices are the future. Today, more or less with all the devices like watches, cars, home appliances and laptops being integrated together, storing data on the cloud has become imperative. The IoT (Internet of Things) industry has also seen a positive demand-supply with growing awareness of consumers towards integrated services. IoT provides minute behavioural insights to businesses and helps them learn more about consumers. With this data, a business can build relevant customer experiences with the help of automation and smart tools.
+	5. Container systems to prevail
+	Cloud industry relationship with container management systems is nothing less than blooming. They give developers the freedom to create measurable and predictable environments that work in silos. They run almost anywhere and provide the same benefit all over. With respect to cloud, their role of enabling developers build, store, run and orchestrate production has made them popular with decision-makers and developers alike. Hence, the cloud hosting provider advocates container management systems to business who have an in-house tech team.
+	Kubernetes has emerged as a favourite for many big guns including Google, Oracle and others. It would hardly take time for smaller enterprises to lap it up. A trend that will evolve in 2018 we say.
+	Are we missing out on anything?
+	Not really. We could also see other cloud computing trends in terms of data center acquisition to expand global footprint or even malware protection companies partnering with cloud companies to provide the latter’s customers with secure cloud environments.
+	Along with these cloud computing trends, we also predict that hybrid cloud will be more popular since organizations now prefer on-premise cloud services in addition to public and private cloud. The defence and security industry has also adapted to the cloud slowly by accepting that the data stored on cloud could be safe. We hope that our predictions come true for 2020.
+	
+	<sm>Source: dailyhostnews.com</sm>
 	</div>
 	<div id="5" class="tabcontent">
 	Researchers at the University of Kent are the latest establishment to have studied this growing problem.
