--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ This was made just only for my usage on https://zoj.me shared over an CDN
     bottom: 0;
     left: 0;
     right: 0;
-    background: url(pictures/posts/julianassange.jpg) top center;
+    background: url(pictures/posts/osakabikethief.jpg) top center;
     opacity: .3;
 }
 .tl3:before {
@@ -546,7 +546,7 @@ body {font-family: "Lato", sans-serif;}
 		New Wi-Fi Encryption Vulnerability Affects Over A Billion Devices
 		</div>
 		<div class="tablinks tl2" onclick="openCity(event, '2')">
-		Lawyer: “U.S. Wanted to Kill WikiLeaks Founder & Make It Look Like an Accident”
+		Japanese police seize 5,800 bike seats, arrest man in theft case
 		</div>
 		<div class="tablinks tl3" onclick="openCity(event, '3')">
 		Dexphot malware uses fileless techniques to install cryptominer
@@ -583,24 +583,12 @@ body {font-family: "Lato", sans-serif;}
 	<sm>Source: eset.com / thehackernews.com</sm>
 	</div>
 	<div id="2" class="tabcontent">
-	<img class="imgintab" width="280vw" src="pictures/posts/julianassange.jpg">
-	Julian Assange’s lawyer claimed this week in court at his extradition hearing that the U.S. wanted to murder the WikiLeaks founder and make it look like an accident.
-	
-	US wanted to kill WikiLeaks founder and make it look like accident:https://t.co/HsR7DebDxx
-	
-	— WikiLeaks (@wikileaks) February 25, 2020
-	American spies teamed up with UC Global, a Spanish company contracted by Ecuador to provide security at the embassy, to help plant “intrusive and sophisticated” secret surveillance of Assange, his attorney stated during the court hearing. Assange was even filmed meeting with his legal team and was so paranoid about constant surveillance that he started sleeping in a tent inside his bedroom, the Telegraph reported.
-	“There were conversations about whether there should be more extreme measures contemplated, such as kidnapping or poisoning Julian Assange in the embassy,” Assange’s attorney, Edward Fitzgerald, told the court, according to the Daily Mail.
-	UC Global’s owner David Morales, was exposed by a mysterious whistleblower known only as “Witness Two,” the report stated.
-	Witness Two revealed that Morales “said the Americans were desperate and had even suggested more extreme measures could be applied against the guest to put an end to the situation,” Fitzgerald told the court according to the Mail.
-	Morales was actively working with “the dark side—in other words, US intelligence agencies,” Fitzgerald claimed, according to the report. Assange was spied on in the Ecuadorian Embassy and the suspects at the time had tried to extort 3,000,000 million euro from the journalism organization for the destruction of the videos and pictures, which included videos of private situations such as doctors visits and lawyers meetings while he was in the embassy, Reuters reported.
-	Since then, police have made at least one arrest. Ring leader Jose Martin Santos, previously convicted for fraud, was arrested in Alicante for trying to bribe WikiLeaks with millions in exchange for private videos of Assange.
-	That plot was later tied to the CIA, who hired UC Global S. L. and its founder David Morales to spy on Assange according to court documents that were presented to Spain’s High Court, El Pais reported.
-	Spanish Judge José de la Mata requested to interview the WikiLeaks founder by video conference as a witness. However, the British judicial system stepped in denying the request, which could affect Assange’s extradition trial, El Pais reported.
-	Assange’s lawyer told the court that it was suggested that the embassy door be left open to make a kidnapping look like it could have been “an accident.”
-	Ironically, in 2016 WikiLeaks tweeted that it took UK police two hours to respond to a call after an unidentified man attempted to scale the wall of the Ecuadorian Embassy at 2:47 am. The would-be intruder escaped security and managed to flee to safety while embassy security waited two hours for U.K. police to take the two minute walk from the police station to the embassy. There is no evidence that this attempt was in any way related to UC Global.
-	
-	<sm>Source: anonhq.com / themindunleashed.com/2020/02/assange-lawyer-claims-us-wanted-kill-wikileaks-founder-make-it-look-like-an-accident.html</sm>
+	<img class="imgintab" width="280vw" src="pictures/posts/osakabikethief.jpg">
+	Osaka prefectural police have seized about 5,800 bicycle seats from a rental storage facility and have arrested a truck driver on theft charges, they said Friday.
+	Hiroaki Suda, 57, was arrested on Feb. 13 after a security camera caught him stealing two bike seats worth roughly 8,000 yen ($73) on Nov. 29 and 30 at a train station and a parking lot for bicycles in Higashiosaka, east of Osaka.
+	Suda has admitted to the charges, with the police quoting him as saying, "I began to steal bike seats about 25 years ago in Tokyo and Osaka to relieve stress at work and, gradually, collecting them turned out to be fun."
+	The police were surprised to seize that many bike seats, and suspect that Suda stole them while driving from city to city.
+	<sm>Source: english.kyodonews.net/news/2020/02/e203b9aeba5d-police-seize-5800-bike-seats-arrest-man-in-theft-case.html</sm>
 	</div>
 	<div id="3" class="tabcontent">
 	Microsoft Corporation revealed its discovery of a polymorphic malware that uses fileless techniques to execute a cryptomining program on victimized machines.
