--- a/about/index.html
+++ b/about/index.html
@@ -220,9 +220,9 @@ a {
 <span>J</span><span>E</span><span>R</span><span>E</span><span>M</span><span>I</span> "<span>E</span><span>R</span><span>T</span><span>Y</span><span>W</span><span>E</span><span>K</span>"
 	</h1>
 	<div class="et-hero-tabs-container">
-		<a class="et-hero-tab" href="#tab-es6">ES6</a>
+		<a class="et-hero-tab" href="#tab-python">Python</a>
 		<a class="et-hero-tab" href="#tab-flexbox">Flexbox</a>
-		<a class="et-hero-tab" href="#tab-react">React</a>
+		<a class="et-hero-tab" href="#tab-react">Lua Script</a>
 		<a class="et-hero-tab" href="#tab-angular">Angular</a>
 		<a class="et-hero-tab" href="#tab-other">Other</a>
 		<span class="et-hero-tab-slider"></span>
@@ -231,17 +231,17 @@ a {
 
   <!-- Main -->
   <main class="et-main">
-    <section class="et-slide" id="tab-es6">
-      <h1>ES6</h1>
-      <h3>something about es6</h3>
+    <section class="et-slide" id="tab-python">
+      <h1>Python</h1>
+      <h3>Python OOP, Django</h3>
     </section>
     <section class="et-slide" id="tab-flexbox">
       <h1>Flexbox</h1>
       <h3>something about flexbox</h3>
     </section>
     <section class="et-slide" id="tab-react">
-      <h1>React</h1>
-      <h3>something about react</h3>
+      <h1>Lua Script</h1>
+      <h3>basics...</h3>
     </section>
     <section class="et-slide" id="tab-angular">
       <h1>Angular</h1>
