--- a/about/index.html
+++ b/about/index.html
@@ -221,10 +221,10 @@ a {
 	</h1>
 	<div class="et-hero-tabs-container">
 		<a class="et-hero-tab" href="#tab-python">Python</a>
-		<a class="et-hero-tab" href="#tab-flexbox">Flexbox</a>
+		<a class="et-hero-tab" href="#tab-xx">xx</a>
 		<a class="et-hero-tab" href="#tab-react">Lua Script</a>
-		<a class="et-hero-tab" href="#tab-angular">Angular</a>
-		<a class="et-hero-tab" href="#tab-other">Other</a>
+		<a class="et-hero-tab" href="#tab-xxx">xxx</a>
+		<a class="et-hero-tab" href="#tab-xxxx">xxxx</a>
 		<span class="et-hero-tab-slider"></span>
 	</div>
 </section>
@@ -235,21 +235,21 @@ a {
       <h1>Python</h1>
       <h3>Python OOP, Django</h3>
     </section>
-    <section class="et-slide" id="tab-flexbox">
-      <h1>Flexbox</h1>
-      <h3>something about flexbox</h3>
+    <section class="et-slide" id="tab-xx">
+      <h1>xx</h1>
+      <h3>something about xx</h3>
     </section>
     <section class="et-slide" id="tab-react">
       <h1>Lua Script</h1>
       <h3>basics...</h3>
     </section>
-    <section class="et-slide" id="tab-angular">
-      <h1>Angular</h1>
-      <h3>something about angular</h3>
+    <section class="et-slide" id="tab-xxx">
+      <h1>xxx</h1>
+      <h3>something about xxx</h3>
     </section>
-    <section class="et-slide" id="tab-other">
-      <h1>Other</h1>
-      <h3>something about other</h3>
+    <section class="et-slide" id="tab-xxxx">
+      <h1>xxxx</h1>
+      <h3>something about xxxx</h3>
     </section>
   </main>
 
